Change carousel functionality from opacity to visibility to fix bug

--- a/app/javascript/stylesheets/app-components.scss
+++ b/app/javascript/stylesheets/app-components.scss
@@ -131,7 +131,7 @@
 
   .carousel-open:checked + .carousel-item {
     position: static;
-    opacity: 100;
+    display: flex;
   }
   .carousel-item {
     -webkit-transition: opacity 0.6s ease-out;
